# anki-ios

./: .gitignore  README.md  build_ios.sh  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: ios-build.yml
docs/superpowers/specs/: 2026-04-23-anki-ios-design.md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
lib/: app.dart  main.dart
lib/providers/: browser_provider.dart  collection_provider.dart  deck_provider.dart  review_provider.dart  settings_provider.dart  stats_provider.dart  sync_provider.dart
lib/screens/: main_tab_screen.dart
lib/screens/browser/: browser_screen.dart
lib/screens/decks/: deck_list_screen.dart
lib/screens/review/: review_screen.dart
lib/screens/settings/: settings_screen.dart
lib/screens/stats/: stats_screen.dart
lib/services/: anki_service.dart
lib/src/rust/: api.dart  frb_generated.dart
lib/widgets/: answer_buttons.dart  deck_tile.dart
rust/: Cargo.toml
rust/src/: api.rs  lib.rs
test/: widget_test.dart
